--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ header {
     .nav-links {
         display: none; 
     }
-
+ }
 
 /* ========================================= */
 /* FOOTER */
